Modified index.html and sign_expense.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,24 @@
 	<div class="transparent-bg"></div>
 	<div class="container">
 		<div class="logo">
-			<img src="images/OHG-Logo.svg" alt="ohgtax Logo" width="293">
+			<nav class="navbar">
+    		<div class="container-fluid">
+    		  <div class="navbar-header">
+    			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+    			  <span class="icon-bar"></span>
+    			  <span class="icon-bar"></span>
+    			  <span class="icon-bar"></span>
+    			</button>
+    			<a class="navbar-brand" href="/"><img src="images/OHG-Logo.svg" alt="ohgtax Logo" width="293"></a>
+    		  </div>
+    		  <div class="collapse navbar-collapse" id="myNavbar">
+    			<ul class="nav navbar-nav navbar-right">
+    			  <li class="active"><a href="http://tadaoa.com">Home</a></li>
+    			  <li><a href="sign_income_and_expense_form.html">Sign Your Income & Expense Form</a></li>
+    			</ul>
+    		  </div>
+    		</div>
+    	  </nav>
 		</div>
 		<div class="header-top">
 
@@ -97,7 +114,7 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery-1.11.0.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/custom.min.js"></script>
+<script src="js/custom.js"></script>
 
 <!--copyright end here-->
 <script type="text/javascript"> 
